<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBackground"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="350dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_how_to_train"
                    android:contentDescription="@string/background_image" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/card_detail_foreground"
                    android:contentDescription="@string/card_detail_foreground" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/backButton"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/ic_back"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/back_button" />

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toTopOf="@+id/tvDate"
                        app:layout_constraintEnd_toEndOf="@+id/roundedImageView"
                        app:layout_constraintEnd_toStartOf="@+id/roundedImageView"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="How to Train Your Dragon: The Hidden World" />

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/tvTitle"
                        tools:text="22 Agustus 2022" />

                    <View
                        android:id="@+id/roundedImageView"
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/subPoster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimary"
            android:elevation="10dp"
            android:src="@drawable/poster_how_to_train"
            app:layout_constraintBottom_toBottomOf="@+id/cvBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvBackground"
            app:riv_corner_radius="10dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_vote"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="#000000"
            app:cardCornerRadius="42dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toStartOf="@+id/subPoster"
            app:layout_constraintStart_toEndOf="@+id/dividerBodyGenre"
            app:layout_constraintTop_toBottomOf="@+id/cvBackground">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:src="@drawable/circle_shape" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvVote"
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="90" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="24dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/percent"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tvVote" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subPoster" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/dividerBody"
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:scaleType="centerCrop"
            android:src="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleOverview"
            app:riv_corner_radius="2dp" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/loremIpsum"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerBody" />

        <TextView
            android:id="@+id/title_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/popularity"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cv_vote" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/dividerBodyGenre"
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:scaleType="centerCrop"
            android:src="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_popularity"
            app:riv_corner_radius="2dp" />

        <TextView
            android:id="@+id/tvPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerBodyGenre"
            tools:text="Popularity : 1123141" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:contentDescription="@string/favorite"
            android:src="@drawable/favorite_selector"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview"
            app:rippleColor="@color/colorPrimary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>